see #225 improve configuration for shift

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -25,6 +25,7 @@
     "A4": "A4",
     "a4_offset": "Offset für A4",
     "a4_pages": "Seiten bei A4",
+    "abc standard 2.2": "abc standard 2.2",
     "abc Tutorial concise": "ABC Tutorial kompakt",
     "abc Tutorial detail": "ABC Tutorial ausführlich",
     "abc Tutorial": "ABC - Einführung",
@@ -70,8 +71,8 @@
     "bold": "fettdruck",
     "bottomup": "Spiel aufwärts",
     "BUG: error while initializing Zupfnoter Controller": "BUG: Fehler beim initialisieren. Bitte informiere Zupfpnoter-Entwicklung",
-    "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
     "c_jumplines": "Sprunglinien",
+    "CAUTION: your abc-code is vulnerable !!! removed beginjs / endjs": "ACHTUNG:: dein ABC-Code enthält ggf. Schadcode. beginjs / endjs entfernt",
     "Choose extract": "Auszug wählen",
     "color": "Farbeinstellung",
     "color_default": "Sonstiges",
@@ -80,6 +81,7 @@
     "color_variant1": "Variante1",
     "color_variant2": "Variante2",
     "compact": "kompakt",
+    "configtemplate": "Vorlage konfigurieren",
     "Configuration": "Konfiguration",
     "configure positioning of rests\ncompatible to version 1.3": "Pausen kompatibel zu version 1.3}",
     "configure your sheet": "Blatt konfigureren",
@@ -137,6 +139,7 @@
     "edit functions": "Bearbeitungsfunktionen",
     "edit global settings for the current song": "Globale Einstellungen für das Musikstück bearibeten",
     "Edit layout paerameters\nin current extract": "Layout-Parameter bearbeiten\nimaktuellen Auszug",
+    "Edit Minc": "Vorschub bearbeiten",
     "edit notebound settings": "Notenbezogene Einstellungen bearbeiten",
     "edit placement of images": "Position von Bildern bearbeiten",
     "Edit presentation of stringanmes": "Darstellung der Saitennamen bearbeiten",
@@ -150,7 +153,6 @@
     "editor and harpnotes\napplicaple to tweak the notes for harp": "Zeige ABC und Harfennoten\ngeeignet zur Feinkorektur\nim Unterlegnotenblatt",
     "editor and notes\napplicable to enter notes": "Zeige ABC und Notendarstellung\ngeeignet zur Eingabe von Noten",
     "edittemplate": "Vorlage bearbeiten",
-    "configtemplate": "Vorlage konfigurieren",
     "Effective value": "aktuell wirksamer Wert",
     "ELLIPSE_SIZE": "Notengröße",
     "Empty voice": "Stimme ist leer",
@@ -186,8 +188,8 @@
     "flowline": "Flußlinie",
     "flowlines": "Flußlinien",
     "Folder in Dropbox": "Ordner in der Dropbox",
-    "followup distance": "Abstand der Folgelinie",
     "follow": "Wiederg. folgen",
+    "followup distance": "Abstand der Folgelinie",
     "font_size": "Schriftgröße",
     "font_style": "Schriftstil",
     "FONT_STYLE_DEF": "Schriftstildefinition",
@@ -273,6 +275,8 @@
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
     "new": "Neu",
+    "nconf": "Notenkonfiguration",
+    "nshift": "Verschbg.",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
     "no filebase given for template. Please type  ": "**--no filebase given for template. Please type  ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
@@ -294,6 +298,7 @@
     "Open a new Zupfnoter window\nwith the reference page": "Öffne ein neues\nZupfnoter-Fenster mit\neiner Erklärung\nder Zupfnoter-Ausgabe",
     "Open ABC file in dropbox": "ABC-File in Dropbox öffnen",
     "Open an concise ABC tutorial (in German)": "Ausführliches Tutorial von Schacherl öffnen (Deutsch)",
+    "Open the ABC-Standard (english)": "ABC Standard öffnen (englisch)",
     "Open the user manual": "Öffne das Zupfnoter Benutzerhandbuch",
     "Open the version information on website": "Vesionsinformationen anzeigen",
     "Open the video tutorials on youtube": "Schulungsvideos auf\nYouTube",
@@ -403,8 +408,8 @@
     "specify which voices\nshow repeat signs instead of jumplines": "Angabe, welche Stimmen\nWiederholgunszeichen statt\nSprunglinien verwenden",
     "specify which voides\nare considered to compute \nvertical spacing": "Angabe, welche Stimmen\nzur Berechnung\nder vertikalen Notenanordnung\nberücksihtigt werden",
     "spos": "Pos. Subleg.",
-    "stdextract": "Standardauszüge aus Vorlage übernehmen",
     "startpos": "Startposition",
+    "stdextract": "Standardauszüge aus Vorlage übernehmen",
     "Stop": "Stop",
     "stringnames": "Saitennamen",
     "Stringnames": "Saitennamen",
@@ -420,6 +425,7 @@
     "T03_copyright_harpnotes": "T03 Copyright Unterlegnoten",
     "T04_to_order": "T04 zu beziehen bei",
     "T05_printed_extracts": "T05 verfügbare Auszüge",
+    "T06_legend": "T06 Legende",
     "T99_do_not_copy": "T99 bitte nicht kopieren",
     "target to jump to": "Sprungziel",
     "template": "Dateivorlage",
@@ -457,6 +463,7 @@
     "vt": "'V' oben",
     "wait for Dropbox authentication": "Warte auf  Dropbox authentication",
     "wrap": "wrap",
+    "wrong placeholder: ": "Fehlerhafter Platzhalter: ",
     "X-position": "X-Position",
     "X:": "X:",
     "X_OFFSET": "X - Offset",
@@ -474,6 +481,7 @@
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
     "Zupfnoter": "Zupfnoter",
+
     "_ende_der_liste": ""
   }
 }
