see #225 improved configuration of tupelos
* edit config shows all parameters
* representation of tuplet note con now be configured

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -548,7 +548,8 @@
     "Title": "Titel",
     "trpos": "oben rechts",
     "Tune": "Noten",
-    "tuplet": "Tuplet",
+    "tuplet": "n-Tole",
+    "tuplets": "n-Tolen",
     "undo": "rückgängig",
     "Unsupported browser. Please use one of ": "Ungeigneter Browser. Bitte benutze einen der folgenden Browser: ",
     "unsupported section found in abc file: ": "Zupfnoter-Abschnitt in ABC-File nicht unterstützt: ",
