#228 now have a ui to copy from/to extract 0

--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -377,13 +377,12 @@
     "Name of annotation": "Name der Beschriftungsvorlage",
     "Name of draggable": "Name der Verschiebemarke",
     "Name of target": "Name des Sprungziels",
+    "nconf": "Notenkonfiguration",
     "neatjson": "JSON-Formatiuerng",
     "Nested Tuplet": "verschachtelte N-tolen",
     "New Entry": "Neuer Eintrag",
     "New": "Neu",
     "new": "Neu",
-    "nconf": "Notenkonfiguration",
-    "nshift": "Verschbg.",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
     "no filebase given for template. Please type  ": "**--no filebase given for template. Please type  ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
@@ -398,6 +397,7 @@
     "notes_regular": "Noten normal",
     "notes_small": "Noten klein",
     "notes_with_beams": "Noten mit Hals",
+    "nshift": "Verschbg.",
     "Okon-Harfe": "Okon-Harfe",
     "Open a demo sheet\n(Ich steh an deiner Kripen hier)": "Öffne ein neues\nZupfnoter-Fenster mit\neinem Demonstrationsstück\n(Ich steh an deiner Krippen hier)",
     "Open a detailed ABC tutorial (in German)": "Kompaktes Tutorial von Penzeng öffnen (Deutsch)",
@@ -432,6 +432,7 @@
     "Please provide also value for out-line": "Bitte gib auch einen wert für die Ausgangslinie",
     "Please provide also X": "Bitte gib auch einen X-Wert zum Y-Wert an",
     "Please provide also Y": "Bitte gib auch einen Y-Wert zum X-Wert an",
+    "pop from extract 0": "aus Auszug 0 holen",
     "pos": "Position",
     "prefix": "Präfix",
     "presets": "Vorlagen",
@@ -447,6 +448,7 @@
     "Private copy": "Privatkopie",
     "produce": "Auszüge",
     "provided by\n": "zu beziehen bei\n",
+    "push to extract 0": "nach Auszug 0 schieben",
     "Quick Setting": "Schnelleinst.",
     "read later": "später lesen",
     "read now": "jetzt lesen",
