--- a/30_sources/SRC_Zupfnoter/public/locale/de-de.json
+++ b/30_sources/SRC_Zupfnoter/public/locale/de-de.json
@@ -218,6 +218,7 @@
     "d8": "**--d8",
     "decimals": "Dezimalstellen",
     "decoration": "Dekoration",
+    "decrease Minc": "kleinerer Vorschub",
     "default": "Vorgabewert",
     "defaults": "Vorgabewerte",
     "Demo": "Demonstration",
@@ -319,6 +320,7 @@
     "import abc, xml from local system": "abc oder xml Datei importieren",
     "Import": "Import",
     "in distance": "Abstand der Eingangslinie",
+    "increase Minc": "größerer Vorschub",
     "inject the default configuration (for development use only)": "inject the default configuration (for development use only)",
     "insert a title for the \ncurrent extract": "Titel für den aktuellen\n Auszug einfügen",
     "Insert addon at cursor position": "Zusatzinformation an der Cursor-Position einfügen",
@@ -385,6 +387,7 @@
     "new": "Neu",
     "No access token to revoke": "Kein Zugriffstoken vorhanden, das gelöscht werden kann.",
     "no filebase given for template. Please type  ": "**--no filebase given for template. Please type  ",
+    "no placeholder value found in  ": "kein Platzhalter gefunden in   ",
     "no preview available yet": "Noch keine Vorschau verfügbar",
     "no suitable ABC found": "keine passende ABC Eingabe gefunden",
     "nonflowrest": "Begleitpausen",
@@ -477,6 +480,8 @@
     "settemplate": "Vorlage aktivieren",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
     "shape": "Linienform",
+    "shift left": "links schieben",
+    "shift right": "rechts schieben",
     "Shifter": "links/rechts Verschiebung",
     "short": "short",
     "SHORTEST_NOTE": "kürzeste Note",
